- Added fix for symfony < 3

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,3 +1,5 @@
 services:
-    TweedeGolf\PrometheusClient\Storage\ApcuAdapter: ~
-    TweedeGolf\PrometheusClient\Storage\ApcAdapter: ~
+    TweedeGolf\PrometheusClient\Storage\ApcuAdapter:
+      class: TweedeGolf\PrometheusClient\Storage\ApcuAdapter
+    TweedeGolf\PrometheusClient\Storage\ApcAdapter:
+      class: TweedeGolf\PrometheusClient\Storage\ApcAdapter
