--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "tweedegolf/prometheus-bundle",
     "description": "Symfony bundle for Prometheus client",
+    "version": "0.4.0",
     "license": "MIT",
     "autoload": {
         "psr-4": {
@@ -14,10 +15,10 @@
         }
     ],
     "require": {
-        "php": ">=5.6.0",
+        "php": ">=7.1.3",
         "tweedegolf/prometheus-client": "^0.2",
-        "symfony/config": "~2.7|~3.0",
-        "symfony/dependency-injection": "~2.7|~3.0",
-        "symfony/http-kernel": "~2.7|~3.0"
+        "symfony/config": "~4.0",
+        "symfony/dependency-injection": "~4.0",
+        "symfony/http-kernel": "~4.0"
     }
 }
