Allow more symfony versions to use this bundle.
* Allow Symfony 2.7+ applications to use the bundle
* Expose `make_memory_adapter` and `register_defaults` settings of CollectorRegistry construction
* Don't make use of autowiring to make the bundle more robust

--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -1,10 +1,11 @@
 services:
-    _defaults:
-        autowire: true
+    TweedeGolf\PrometheusClient\Storage\ApcuAdapter:
+        class: TweedeGolf\PrometheusClient\Storage\ApcuAdapter
 
-    TweedeGolf\PrometheusClient\Storage\ApcuAdapter: ~
-    TweedeGolf\PrometheusClient\Storage\ApcAdapter: ~
+    TweedeGolf\PrometheusClient\Storage\ApcAdapter:
+        class: TweedeGolf\PrometheusClient\Storage\ApcAdapter
 
-    TweedeGolf\PrometheusBundle\Controller\:
-        resource: '../../Controller'
-        tags: ['controller.service_arguments']
+    TweedeGolf\PrometheusBundle\Controller\MetricsController:
+        class: Tweedegolf\PrometheusBundle\Controller\MetricsController
+        arguments:
+            - "@TweedeGolf\PrometheusClient\CollectorRegistry"
